[package]
name = "uniffi_udl"
version = "0.26.0"
description = "udl parsing for the uniffi project"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
license = "MPL-2.0"
edition = "2021"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[dependencies]
anyhow = "1"
weedle2 = { version = "5.0.0", path = "../weedle2" }
textwrap = "0.16"
uniffi_meta = { path = "../uniffi_meta", version = "=0.26.0" }
uniffi_testing = { path = "../uniffi_testing", version = "=0.26.0" }
