[package]
name = "uniffi_udl"
version = "0.28.2"
description = "udl parsing for the uniffi project"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
license = "MPL-2.0"
edition = "2021"
keywords = ["ffi", "bindgen"]
readme = "../README.md"

[dependencies]
uniffi_meta = { workspace = true }
anyhow = { workspace = true }
weedle2 = { workspace = true }
# Don't include the `unicode-linebreak` or `unicode-width` since that functionality isn't needed for
# docstrings.
textwrap = { workspace = true, features = ["smawk"] }

