[package]
name = "weedle2"
version = "2.0.0"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>", "Jan-Erik Rediger <jrediger@mozilla.com>"]
description = "A WebIDL Parser"
license = "MIT"
documentation = "https://docs.rs/weedle2"
homepage = "https://github.com/mozilla/uniffi-rs/tree/main/weedle2"
repository = "https://github.com/mozilla/uniffi-rs"
readme = "./README.md"
edition = "2018"

[lib]
name = "weedle"

[dependencies]
nom = { version = "5.0.0", default-features = false, features = ["std"] }
