[package]
name = "uniffi-bindgen-tests-kotlin"
version = "0.31.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
camino = "1"
glob = "0.3"
uniffi = { path = "../../uniffi", features = ["bindgen"] }
uniffi_bindgen = { path = "../../uniffi_bindgen", features = ["test-util"] }
uniffi-bindgen-tests = { path = "../lib" }
