[package]
name = "uniffi-bindgen-tests"
version = "0.31.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
async-trait = "0.1"
camino = "1"
glob = "0.3"
thiserror = "2"
uniffi = { path = "../../uniffi", features = ["bindgen", "ffi-trace", "cargo-metadata"], default-features = false }
url = "2.5"

uniffi-bindgen-tests-external-types-source = { path = "../external-types" }

[features]
default = ["simple_fns", "primitive_types", "records", "enums", "compound_types", "interfaces",
    "custom_types", "errors", "callback_interfaces", "futures", "trait_interfaces", "defaults",
    "external-types", "renames", "bytes", "recursive_types", "time", "rust_traits"]
simple_fns = []
primitive_types = []
defaults = []
compound_types = []
records = []
enums = []
interfaces = []
custom_types = []
errors = []
callback_interfaces = []
trait_interfaces = []
futures = []
external-types = []
renames = []
bytes = []
recursive_types = []
time = []
rust_traits = []
