[package]
name = "uniffi-example-arithmetic-procmacro"
edition = "2021"
version = "0.22.0"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "arithmeticpm"

[dependencies]
uniffi = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[features]
ffi-trace = ["uniffi/ffi-trace"]
