[package]
name = "uniffi-example-arithmetic"
edition = "2021"
version = "0.22.0"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "arithmetical"

[dependencies]
uniffi = { workspace = true, features=["pointer-ffi"] }
thiserror = "2"

[build-dependencies]
# Add the "pointer-ffi" feature to make sure things can build correctly
uniffi = { workspace = true, features = ["build", "pointer-ffi"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[features]
ffi-trace = ["uniffi/ffi-trace"]
