[package]
name = "uniffi-example-callbacks"
edition = "2021"
version = "0.22.0"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_callbacks"

[dependencies]
uniffi = {path = "../../uniffi", version = "0.24" }
thiserror = "1.0"

[build-dependencies]
uniffi = {path = "../../uniffi", version = "0.24", features = ["build"] }

[dev-dependencies]
uniffi = {path = "../../uniffi", version = "0.24", features = ["bindgen-tests"] }
