[package]
name = "uniffi-example-custom-types"
edition = "2021"
version = "0.21.1"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "custom_types"

[dependencies]
anyhow = "1"
bytes = "1.0"
serde_json = "1"
uniffi = {path = "../../uniffi", features=["builtin-bindgen"]}
url = "2.2"

[build-dependencies]
uniffi_build = {path = "../../uniffi_build", features=["builtin-bindgen"]}

[dev-dependencies]
uniffi_bindgen = {path = "../../uniffi_bindgen"}
uniffi_macros = {path = "../../uniffi_macros"}
