[package]
name = "uniffi-example-custom-types"
edition = "2021"
version = "0.22.0"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "custom_types"

[dependencies]
anyhow = "1"
bytes = "1.3"
uniffi = {path = "../../uniffi", version = "0.3.1" }
url = "2.2"

[build-dependencies]
uniffi = {path = "../../uniffi", version = "0.3.1", features = ["build"] }

[dev-dependencies]
uniffi = {path = "../../uniffi", version = "0.3.1", features = ["bindgen-tests"] }
