[package]
name = "uniffi-example-custom-types"
edition = "2021"
version = "0.22.0"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "custom_types"

[dependencies]
anyhow = "1"
bytes = "1.3"
uniffi = { workspace = true }
url = "2.2"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
